organized files and added about page

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -124,7 +124,7 @@ ul {
     text-decoration: none;
 }
 
-#digital-divide-title {
+.digital-divide-title {
     font-family: 'Monaco', sans-serif;
     font-size: 20px;
     margin: 20px 0;
