--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -69,6 +69,11 @@ nav ul {
     margin: 35px auto;
 }
 
+.tutorial-row-single {
+    width: 70%;
+    margin: 35px auto;
+}
+
 #about {
     width: 70%;
     margin: 35px auto;
