Access divide page

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -143,6 +143,13 @@ h4 {
     color: var(--black);
 }
 
+h4.access {
+    width: 70%;
+    margin: 20px auto;
+    font-size: 20px;
+    font-family: 'Monaco', sans-serif;
+}
+
 #zoom, #sources, #ettiquette {
     width: 70%;
     margin: 35px auto;
@@ -166,4 +173,9 @@ img {
     font-size: 30px;
     margin: 20px 0;
     text-align: center;
+}
+
+.access-divide {
+    width: 70%;
+    margin: 20px auto;
 }
